Track uploads by identifier and destination; trim stale staging bytes
Review of #1773 found that the cached-destination check added earlier in this
PR turned a silent failure into a lockout. FlowInfoStorage was keyed on the
client's flowIdentifier alone, and flow.js's default identifier (used by the
encounter form, the report image section and both legacy uploaders) is
size + "-" + the filename with most punctuation stripped -- the same every time
a given photo is picked. Entries are only dropped when an upload completes, so
after an upload was abandoned partway, re-adding the same photo to a new
submission collided with the stale entry. Before this PR that silently wrote
the new chunks into the abandoned upload's file; with the check, every chunk
was refused until the entry was cleared. Anyone past the access gate could also
reserve a guessed identifier to block someone else's upload -- and because the
entry was created before chunk validation, even a refused chunk reserved it.

- FlowInfoStorage is keyed on identifier + validated staging path, with
  lookup() (never inserts), register() (atomic putIfAbsent, so concurrent first
  chunks converge on one entry) and remove() (removes only that exact entry).
- getFlowInfo() now only describes the request's upload. doPost registers it
  after the chunk passes geometry and length validation, and refuses a request
  whose geometry differs from an already-registered upload with the same key.
  doGet only looks up, so a status probe creates no bookkeeping.
- Finalization truncates the staging file to the declared size before renaming.
  Staging files are opened without truncation, so a shorter upload landing on a
  .temp left by an abandoned longer one kept the old file's trailing bytes.
- Each registered upload has a read-write lifecycle lock: chunk writes share
  it, so chunks of one file still write in parallel; finalization takes it
  exclusively, so it never overlaps a write in flight and succeeds at most once
  per re